Added screenshot Updated project file for OS-X build

--- a/src/SudoWire.mxml
+++ b/src/SudoWire.mxml
@@ -184,7 +184,7 @@
             }
 
             appUpdater = new ApplicationUpdaterUI();
-            appUpdater.configurationFile = new File('app:/updateConfig.xml');
+            appUpdater.configurationFile = new File('app:/updateConfig.Singleton.xml');
             if (Version.TESTING) {
                 appUpdater.addEventListener(UpdateEvent.INITIALIZED, function (ev:Event):void {
                     appUpdater.checkNow();
